--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -1,9 +1,9 @@
 $html-font-size: 16px;
 
-$blue: hsl(223, 87%, 63%); //
-$paleBlue: hsl(223, 100%, 88%); //
+$blue: hsl(223, 87%, 63%);
+$paleBlue: hsl(223, 100%, 88%);
 $emailBlue: #B8C7ED;
 $iconBlue: #E4EBFD;
 $lightRed: hsl(354, 100%, 66%);
-$gray: hsl(0, 0%, 59%); //
-$veryDarkBlue: hsl(209, 33%, 12%); //
+$gray: hsl(0, 0%, 59%);
+$veryDarkBlue: hsl(209, 33%, 12%);
