--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,27 +1,34 @@
 html {
-  font-size: 100%;
   box-sizing: border-box;
+  font-size: 100%;
 }
 
 *,
 *::before,
 *::after {
+  box-sizing: inherit;
   margin: 0;
   padding: 0;
-  box-sizing: inherit;
 }
 
 body {
+  color: $gray;
+
+  display: -webkit-box;
+
+  display: -ms-flexbox;
+
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  font-family: 'Libre Franklin', sans-serif;
+  font-size: rem(12px);
+  font-weight: 300;
   height: 100%;
   min-height: 100vh;
   text-align: center;
-  font-size: rem(12px);
-  font-family: 'Libre Franklin', sans-serif;
-  color: $gray;
-  font-weight: 300;
-
-  display: flex;
-  flex-direction: column;
 
   @include breakpoint-up(medium) {
     font-size: rem(16px);
@@ -29,8 +36,8 @@ body {
 }
 
 .attribution {
-  margin-top: rem(9px);
   font-size: rem(11px);
+  margin-top: rem(9px);
 
   @include breakpoint-up(medium) {
     margin-top: rem(15px);
