--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -35,12 +35,25 @@
 }
 
 .landing {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+
+  -webkit-box-flex: 1;
+
+  -ms-flex: 1 1 0;
 
   flex: 1 1 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .header {
@@ -70,14 +83,24 @@
 }
 
 .email {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   margin: rem(32px) 6.25% 0 6.25%;
 
   @include breakpoint-up(medium) {
-    margin: rem(40px) 0 0 0;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    margin: rem(40px) 0 0 0;
   }
 
   &-form {
@@ -115,11 +138,17 @@
 }
 
 .social {
-  display: flex;
-  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
-  margin-top: rem(64px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   font-size: rem(14px);
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin-top: rem(64px);
 
   &-icons {
     padding: rem(6px) rem(8px) rem(6px) rem(8px);
